# quincy

./: .gitignore  .gitlab-ci.yml  .llvm-cov.toml  Cargo.toml  Dockerfile  README.md  SECURITY.md  codecov.yml  packager.linux.toml  packager.macos.toml  packager.unix.toml  packager.windows.toml
.github/: FUNDING.yml
.github/workflows/: release.yaml  rust.yaml
.gitlab/release_templates/: default.md
examples/: client.toml  server.toml  users.toml
quincy/: Cargo.toml
quincy-client/: Cargo.toml
quincy-client/src/: auth.rs  client.rs  lib.rs  relayer.rs  users_file_auth.rs
quincy-client/src/client/: mod.rs  relayer.rs
quincy-gui/: Cargo.toml  build.rs  packager.unix.toml  packager.windows.toml
quincy-gui/resources/: client.toml  quincy-client-daemon.manifest  quincy-client-daemon.rc
quincy-gui/resources/common/: client.toml
quincy-gui/resources/scripts/: package_unix.sh  package_windows.ps1  windows_deps.ps1
quincy-gui/src/: gui.rs  ipc.rs  lib.rs  main.rs  privilege.rs  validation.rs
quincy-gui/src/gui/: app.rs  error.rs  handlers.rs  instance.rs  mod.rs  styles.rs  types.rs  ui_builders.rs  utils.rs
quincy-identity/: Cargo.toml
quincy-identity/src/: main.rs
quincy-server/: Cargo.toml
quincy-server/src/: auth.rs  identity.rs  lib.rs  main.rs  users.rs  users_file.rs
quincy-server/src/server/: address_pool.rs  connection.rs  metrics.rs  mod.rs  session.rs
quincy-tests/: Cargo.toml
quincy-tests/tests/: test_address_pool.rs  test_bandwidth_limiting.rs  test_client_communication.rs  test_client_isolation.rs  test_end_to_end.rs  test_failed_auth.rs
quincy-tests/tests/common/: mod.rs
quincy-tests/tests/static/: bad_client_cert.pem  bad_client_key.pem  client.toml  client_cert.pem  client_key.pem  server.toml  server_cert_ec_sec1.pem  server_cert_rsa_pkcs1.pem  server_key_ec_sec1.pem  server_key_rsa_pkcs1.pem  users.toml
quincy-tests/tests/static/configs/noise_hybrid/: client.toml  server.toml
quincy-tests/tests/static/configs/noise_standard/: client.toml  server.toml
quincy-tests/tests/static/configs/tls_hybrid/: client.toml  server.toml
quincy-tests/tests/static/configs/tls_postquantum/: client.toml  server.toml
quincy-tests/tests/static/configs/tls_standard/: client.toml  server.toml
quincy/src/: certificates.rs  config.rs  constants.rs  error.rs  ip_assignment.rs  lib.rs  socket.rs
quincy/src/auth/: client.rs  mod.rs  server.rs  stream.rs
quincy/src/client/: relayer.rs
quincy/src/network/: mod.rs  packet.rs  socket.rs
quincy/src/network/dns/: darwin.rs  linux.rs  windows.rs
quincy/src/network/interface/: mod.rs  tun_rs.rs
quincy/src/network/route/: mod.rs  posix.rs  windows.rs
quincy/src/utils/: command.rs  privilege.rs  tasks.rs  tracing.rs
quincy/tests/: test_client_communication.rs  test_client_isolation.rs  test_end_to_end.rs  test_failed_auth.rs
quincy/tests/common/: mod.rs
quincy/tests/static/: client.toml
resources/freebsd/: MANIFEST.in  quincy.rc
resources/scripts/: package_unix.sh  package_windows.ps1
src/: ipc.rs  lib.rs
src/auth/: client.rs
src/client/: mod.rs  relayer.rs
src/network/dns/: linux.rs
src/network/interface/: tun_rs.rs
src/utils/: command.rs  mod.rs  privilege.rs
