[workspace]
members = ["quincy", "quincy-client", "quincy-identity", "quincy-server", "quincy-gui", "quincy-tests"]
resolver = "2"

[workspace.package]
version = "2.0.0-rc.1"
authors = ["Jakub Kubík <jakub.kubik.it@protonmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
edition = "2021"
rust-version = "1.80"
homepage = "https://github.com/quincy-rs/quincy"
repository = "https://github.com/quincy-rs/quincy"
keywords = ["vpn", "quic", "tunnel", "networking", "tokio"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Internal crates
quincy = { path = "quincy", version = "2.0.0-rc.1" }
quincy-client = { path = "quincy-client", version = "2.0.0-rc.1" }
quincy-server = { path = "quincy-server", version = "2.0.0-rc.1" }

# Quinn
quinn = { version = "^0.11.8", default-features = false, features = [
    "log",
    "platform-verifier",
    "runtime-tokio",
    "rustls-aws-lc-rs",
] }

# Interfaces and networking
tun-rs = { version = "=2.7.3", features = ["async_tokio"] } # pinned audited version
socket2 = { version = "^0.6.0", features = ["all"] }
bytes = "^1.11"
ipnet = { version = "^2.7", features = ["serde"] }

# Tokio
tokio = { version = "^1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "net",
    "signal",
] }
dashmap = "^6"
futures = "^0.3.17"
async-trait = "^0.1.77"

# Configuration
figment = { version = "^0.10.8", features = ["toml", "env"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# TLS
rustls = { version = "^0.23.18", default-features = false, features = [
    "aws-lc-rs",
] }
rustls-pemfile = "^2.0"
aws-lc-rs = "^1.16"

# Noise
reishi-quinn = { version = "^0.2.0", features = ["pq"] }
base64 = "^0.22"

# Crypto RNG
rand_core = { version = "^0.6.4", features = ["getrandom"] }

# Certificate generation
rcgen = "^0.13"

# Tracing/Logging
tracing = { version = "^0.1.37", features = ["release_max_level_info"] }
tracing-subscriber = { version = "^0.3.20", features = ["env-filter", "ansi"] }
nu-ansi-term = "^0.50.0"

# Privilege escalation
privesc = "^1.2.0"

# Utils
thiserror = "^2.0"
clap = { version = "^4.1", features = ["derive"] }
regex = "^1.11"
zeroize = "^1.8.2"
secrecy = { version = "^0.10", features = ["serde"] }

# GUI
iced = { version = "^0.14.0", features = [
    "tokio",
    "advanced",
    "highlighter",
] }

# Metrics
metrics = "^0.24"
metrics-exporter-prometheus = "^0.16"
metrics-util = "^0.19"

# Rate limiting
governor = "^0.10"

# Alloc
jemallocator = { version = "0.5" }

# WinTun
wintun-bindings = { version = "0.7.31", features = ["verify_binary_signature"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
