[package]
name = "quincy-gui"
description = "QUIC-based VPN - GUI client and daemon"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.packager]
product_name = "Quincy"
version = "1.0.0-beta.2"
identifier = "rs.quincy.quincy"
description = "QUIC-based VPN"
homepage = "https://github.com/quincy-rs/quincy"
license_file = "../LICENCE"
before_packaging_command = "cargo build --release"
icons = ["resources/common/icon.png", "resources/common/icon@2x.png"]
binaries = [
    { path = "quincy-client-gui", main = true },
    { path = "quincy-client-daemon", main = false }
]

[[bin]]
name = "quincy-client-gui"
path = "src/bin/client_gui.rs"

[[bin]]
name = "quincy-client-daemon"
path = "src/bin/client_daemon.rs"

[features]
default = ["offload", "jemalloc"]
offload = ["quincy/offload"]
jemalloc = ["quincy/jemalloc"]

[dependencies]
quincy = { path = "../quincy", version = "1.0.0-beta.2" }
quincy-client = { path = "../quincy-client", version = "1.0.0-beta.2" }

# Configuration
clap = { workspace = true }

# GUI
iced = { workspace = true }

# Networking
ipnet = { workspace = true }

# Utils
# anyhow removed - using quincy::error::Result instead
dashmap = { workspace = true }

# Tokio
tokio = { workspace = true }

# Tracing/Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
regex = { workspace =true }
