[package]
name = "quincy-server"
description = "QUIC-based VPN - Server binaries"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "quincy-server"
path = "src/main.rs"

[[bin]]
name = "quincy-identity"
path = "src/bin/identity.rs"

[features]
default = ["offload", "jemalloc"]
offload = ["quincy/offload"]
jemalloc = ["quincy/jemalloc"]

[dependencies]
quincy = { workspace = true }

# Configuration
clap = { workspace = true }

# Utils
# anyhow removed - using quincy::error::Result instead
dashmap = { workspace = true }

# Tokio
tokio = { workspace = true }
futures = { workspace = true }

# Tracing/Logging
tracing = { workspace = true }

# Networking
ipnet = { workspace = true }
bytes = { workspace = true }

# Quinn
quinn = { workspace = true }

# TLS
rustls = { workspace = true }
rcgen = { workspace = true }
aws-lc-rs = { workspace = true }

# Noise (for quincy-identity)
reishi-quinn = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }

# Configuration
figment = { workspace = true }

# Serialization
serde = { workspace = true }
