[package]
name = "quincy-tests"
description = "Integration tests for Quincy VPN"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
quincy = { path = "../quincy", version = "1.0.0-beta.2" }
quincy-client = { path = "../quincy-client", version = "1.0.0-beta.2" }
quincy-server = { path = "../quincy-server", version = "1.0.0-beta.2" }

tokio = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }
bytes = { workspace = true }

rstest = "^0.25.0"
etherparse = "^0.18.0"
tracing-test = { version = "^0.2.4", features = ["no-env-filter"] }
